fixed cors app and cards spacing for mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -37,14 +37,13 @@ label {
 .aboutCard {
   padding: 15px;
   width: 19rem;
-  height: 2rem
+  height: 100%
 }
 
 .profile-img-card {
-  width: 96px;
-  height: 96px;
-  margin: 0 auto 10px;
-  display: block;
+ height: 100px;
+ width: 100px;
+ margin: 0 auto;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
